    - Add various options to override some report fields with local values.
    - Add --verbose option and be quiet by default.
    - Read ProcMaps for additional library dependencies, to also catch
      libraries loaded at runtime (plugins).
    - Set correct debug file directory when starting an interactive gdb
      session with -g.
  * debian/control: Add gdb dependency to python-apport.

 -- Martin Pitt <martin.pitt@ubuntu.com>  Wed, 31 Jan 2007 09:44:41 +0100

apport (0.46) feisty; urgency=low

  * debian/control: Bump dependencies to python-apport due to recent changes
    in expected return values in some UI functions. Closes: LP#82267
  * bin/package_hook: Remove erroneous 'import apport.packaging', which
    shadows the packaging variable in the apport package. This unbreaks the
    package problem hook. Closes: LP#82297

 -- Martin Pitt <martin.pitt@ubuntu.com>  Wed, 31 Jan 2007 07:51:24 +0100

apport (0.45) feisty; urgency=low

  New feature: Infrastructure for package install/upgrade failures:

  * Add bin/package_hook: Script for creating a report for a package
    installation/upgrade failure. It receives a package name, a number of log
    files, and an ErrorMessage: from stdin. This will be called from e.g.
    dist-upgrader.
  * setup.py, debian/apport.install: Ship package_hook.
  * apport/ui.py: If ProblemType is 'Package', call a new function
    self.ui_present_package_error() instead of presenting a crash. Add test
    suite checks for the package error report workflow.
  * apport/ui.py, create_crash_bug_title(): Create default bug title for
    package reports. Add various test cases.
  * gtk/apport-gtk{,.glade}: GTK implementation of ui_present_package_error().

  New feature: Maintain a per-binary blacklist to inhibit apport crash reports
  until the binary changes. Closes: LP#79408

  * apport/report.py: Add new Report methods check_ignored() and mark_ignore()
    to check for/set ignore list entries. Add test cases.