@@ -10,8 +10,14 @@ apport (0.47) UNRELEASED; urgency=low
     - Set correct debug file directory when starting an interactive gdb
       session with -g.
   * debian/control: Add gdb dependency to python-apport.
+  * backends/packaging-dpkg.py test suite: Verify that packages returned by
+    get_dependencies() actually exist. This catches the 'chops off first
+    letter of package name sometimes' bug.
+  * backends/packaging-dpkg.py, _init_status(): Add missing space to Depends:
+    field format in dpkg-query call. This fixes the chopped-off first letters
+    in the 'Dependencies' report field.
 
- -- Martin Pitt <martin.pitt@ubuntu.com>  Wed, 31 Jan 2007 09:44:41 +0100
+ -- Martin Pitt <martin.pitt@ubuntu.com>  Wed, 31 Jan 2007 10:19:17 +0100
 
 apport (0.46) feisty; urgency=low
 
